--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <label class="campo-grupo">
           <span class="texto-medio-azul">Produto</span>
           <select class="produto-input" name="produto" id="produto">
+            <option value="Cadeira Gamer">Cadeira Gamer - R$899,99</option> 
+            <option value="Gamer Presente">Gamer Presente - R$19,99</option> 
+            <option value="Game Pass">Games Pass - R$39,99</R139></option> 
             <option value="Fone de ouvido - R$100">Fone de ouvido - R$100</option>
             <option value="Celular - R$1400">Celular - R$1400</option>
             <option value="Oculus VR - R$5000">Oculus VR - R$5000</option>
